--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -12,6 +12,7 @@
     "@agent-zoo/types": "workspace:*",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.20",
     "framer-motion": "^11.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
